samples/_failures_safe/1761470680_e10c7c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bed5eec2.c:172: error: expected ‘;’, ‘,’ or ‘)’ at end of input
